# GeekMagicWeatherClockAPI

./: README.md  pyproject.toml
GeekMagicWeatherClockAPI/: __init__.py  core.py
GeekMagicWeatherClockAPI.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
