[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "GeekMagicWeatherClockAPI"
version = "0.1.1"
description = "Python wrapper for controlling the GeekMagic SmallTV"
readme = "README.md"
requires-python = ">=3.7"
dependencies = ["requests"]

[project.urls]
Homepage = "https://github.com/eman225511/GeekMagicWeatherClockAPI"